# tiktok-shop-mcp

./: .env.template  .gitignore  pyproject.toml  refresh_tokens.py  requirements.txt
tests/: test_get_account_video_gmv.py
tiktok_shop_mcp/: __init__.py  __main__.py  client.py  config.py  main.py  server.py
tiktok_shop_mcp/tools/: __init__.py  get_analytics.py  get_finance.py  get_orders.py  get_products.py  get_returns.py
